feat: added new methods